<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/distance_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/step_setup_distance_hint"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/coordinates_calibrate_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="0.00"
        android:textAlignment="center"
        android:textSize="36sp" />

    <Button
        android:id="@+id/coordinates_calibrate_next_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/step_setup_next" />


    <Button
        android:id="@+id/coordinates_calibrate_back_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/step_setup_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/coordinates_calibrate_next_2"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/coordinates_calibrate_avgstepdistance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.5"
            android:text="@string/step_setup_average_stepdistance"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/coordinates_calibrate_avgstepperiod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/step_setup_average_stepperiod"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>
