<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/record_id_edittext"
            android:text="@string/node_name_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/record_id_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_input_layout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/description_edittext"
            android:text="@string/description_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/measuring_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/measure_time_label_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/measure_time_edittext"
            android:text="@string/measure_count_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/measure_count_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:spinnerMode="dropdown" />

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/minutes_text"-->
        <!--            android:textAppearance="?android:attr/textAppearanceMedium" />-->

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/edit_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/measuring_time_layout">

        <!--        <TextView-->
        <!--            android:id="@+id/initial_wifi_label_textview"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:labelFor="@+id/initial_wifi_textview"-->
        <!--            android:text="@string/initial_wifi_name"-->
        <!--            android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--            android:textStyle="bold" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/initial_wifi_textview"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="8dp"-->
        <!--            android:layout_toEndOf="@+id/initial_wifi_label_textview"-->
        <!--            android:textAppearance="?android:attr/textAppearanceMedium" />-->

        <TextView
            android:id="@+id/coordinates_label_textview_editmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/initial_wifi_label_textview"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/coordinates_edittext"
            android:text="@string/coordinates_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/coordinates_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/initial_wifi_textview"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/coordinates_label_textview_editmode"
            android:inputType="text" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/camera_imageview"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_above="@+id/progress_bar"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_placeholder" />


    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout_rec_and_edit"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:indeterminate="false"
        android:progress="0" />

    <RelativeLayout
        android:id="@+id/buttons_layout_rec_and_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/infobox_record_edit"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/capture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/capture_button" />

        <RelativeLayout
            android:id="@+id/fingerprint_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/capture_button">

            <ImageButton
                android:id="@+id/record_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/measure_wifi_button_text" />

            <TextView
                android:id="@+id/progress_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/save_node_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/fingerprint_button_layout"
            android:contentDescription="@string/save_button_text"
            android:text="@string/save_node_button_text"

            />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/show_fingerprint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/infobox_record_edit"
        android:layout_alignParentEnd="true"
        android:background="@android:color/white"
        android:contentDescription="@string/detailed_results_button_description" />

    <TextView
        android:id="@+id/infobox_record_edit"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/info_box"
        android:paddingStart="10dp"
        android:paddingTop="6dp"
        android:paddingEnd="10dp"
        android:text="@string/record_and_edit_infobox" />

</RelativeLayout>