<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/id_textview_node_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/measured_node_textview_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_red_dark" />


    <TextView
        android:id="@+id/description_textview_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_textview_node_show"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <RelativeLayout
        android:id="@+id/wifi_show_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_textview_show"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/wifi_label_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_wifi_name_show"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/wifi_name_textview_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/wifi_label_show"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/coordinates_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_show_layout"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/coordinates_label_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordinates_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/coordinates_textview_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/coordinates_label_show"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/camera_imageview_show"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/coordinates_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"

        android:contentDescription="@string/image_placeholder" />


    <TextView
        android:id="@+id/infobox_location"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/info_box"
        android:paddingStart="10dp"
        android:paddingTop="6dp"
        android:paddingEnd="10dp"
        android:text="@string/node_show_infobox_text" />

</RelativeLayout>